<resources>
    <string name="app_name">Planner</string>

    <!-- welcome -->
    <string name="welcome_show_planner">Planner</string>
    <string name="welcome_show_settings">Settings</string>

    <!-- main -->
    <string name="main_title">Planner</string>

    <!-- plan -->
    <string name="plan_name_title">Planner</string>
    <string name="plan_list_label">Plans</string>
    <string name="plan_all_label">All</string>
    <string name="plan_default_label">Default</string>
    <string name="plan_deadline_label">Deadline</string>

    <!-- plan details -->
    <string name="plan_details_title">Plan details</string>
    <string name="plan_details_title_hint">Title</string>
    <string name="plan_details_error_invalid_title_empty">Required</string>
    <string name="plan_details_error_invalid_title_too_short">Min 5 characters required</string>
    <string name="plan_details_error_invalid_title_too_long">Max 50 characters allowed</string>
    <string name="plan_details_description_hint">Description</string>
    <string name="plan_details_important">Important</string>
    <string name="plan_details_deadline">Deadline</string>
    <string name="plan_details_save">Save</string>
    <string name="plan_details_decrease_position">Decrease position</string>
    <string name="plan_details_increase_position">Increase position</string>
    <string name="plan_details_duplicate">Duplicate</string>
    <string name="plan_details_delete">Delete</string>

    <!-- plan details deletion -->
    <string name="plan_details_deletion_title">Are you sure you want to delete this plan?</string>

    <!-- settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_alarm">Alarm</string>
    <string name="settings_save">Save</string>
    <string name="settings_delete">Delete</string>
    <string name="settings_alarm_set">Alarm set</string>
    <string name="settings_alarm_canceled">Alarm canceled</string>

    <!-- notification -->
    <string name="notification_title">Plans</string>

    <!-- general -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="creation_date">Creation date: %s</string>
    <string name="success">Success…</string>
</resources>
