<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainActivity">

    <data>

        <variable
            name="planDetailsViewModel"
            type="com.example.planner.ui.main.plandetails.PlanDetailsViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/partial_app_bar" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/plan_details_title_hint"
                        android:importantForAutofill="no"
                        android:inputType="textCapSentences"
                        android:maxLength="@integer/plan_title_max_length"
                        android:onFocusChange="@{(view, hasFocus) -> planDetailsViewModel.title.onFocusChange(hasFocus)}"
                        android:singleLine="true"
                        android:text="@={planDetailsViewModel.title.value}"
                        tools:targetApi="o" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{planDetailsViewModel.title.error}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/plan_details_description_hint"
                        android:importantForAutofill="no"
                        android:inputType="textCapSentences|textMultiLine"
                        android:lines="@integer/plan_description_lines"
                        android:text="@={planDetailsViewModel.description}"
                        tools:targetApi="o" />

                </android.support.design.widget.TextInputLayout>

                <Switch
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:checked="@={planDetailsViewModel.important}"
                    android:text="@string/plan_details_important" />

                <Switch
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:checked="@={planDetailsViewModel.hasDeadlineDateTime}"
                    android:text="@string/plan_details_deadline" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{planDetailsViewModel.hasDeadlineDateTime}">
                    <include
                        layout="@layout/partial_date_time"
                        dateTimeField="@{planDetailsViewModel.deadlineDateTime}" />
                </FrameLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin"
                    tools:text="@string/creation_date"
                    creationDate="@{planDetailsViewModel.creationDate}" />

                <Button
                    style="@style/DefaultButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:onClick="@{() -> planDetailsViewModel.save()}"
                    android:text="@string/plan_details_save" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        style="@style/DefaultButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="@{() -> planDetailsViewModel.decreasePosition()}"
                        android:text="@string/plan_details_decrease_position"
                        android:visibility="@{planDetailsViewModel.isCreated()}" />

                    <Button
                        style="@style/DefaultButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="@{() -> planDetailsViewModel.increasePosition()}"
                        android:text="@string/plan_details_increase_position"
                        android:visibility="@{planDetailsViewModel.isCreated()}" />

                </LinearLayout>

                <Button
                    style="@style/DefaultButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> planDetailsViewModel.duplicate()}"
                    android:text="@string/plan_details_duplicate"
                    android:visibility="@{planDetailsViewModel.isCreated()}" />

                <Button
                    style="@style/DefaultButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> planDetailsViewModel.showDeletionDialog()}"
                    android:text="@string/plan_details_delete"
                    android:visibility="@{planDetailsViewModel.isCreated()}" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>
</layout>