<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.settings.SettingsActivity">

    <data>

        <variable
            name="settingsViewModel"
            type="com.example.planner.ui.settings.SettingsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin">

            <TextView
                style="@style/LabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_alarm" />

            <include
                layout="@layout/partial_date_time"
                dateTimeField="@{settingsViewModel.alarmDateTime}" />

            <Button
                style="@style/DefaultButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:onClick="@{() -> settingsViewModel.save()}"
                android:text="@string/settings_save" />

            <Button
                style="@style/DefaultButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> settingsViewModel.delete()}"
                android:text="@string/settings_delete" />

            <!--<TextView-->
            <!--style="@style/LabelTextView"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginTop="@dimen/margin"-->
            <!--android:text="@{settingsViewModel.minute, default=@string/settings_title}" />-->

        </LinearLayout>

    </ScrollView>
</layout>